Se agregaron las resoluciones para el sistema de matrices homogeneas Denavit-H. Se resolvio el sistema cinematico directo del robot

--- a/Simulacion_Deskbot.ipynb
+++ b/Simulacion_Deskbot.ipynb
@@ -346,11 +346,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.- Librerias utilizadas para calculos simbolicos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importamos las librerías necesarias\n",
+    "import sim          # librería para conectar con CoppeliaSim\n",
+    "import sympy as sp  # librería para cálculo simbólico\n",
+    "import numpy as np\n",
+    "\n",
     "from sympy.physics.vector import init_vprinting\n",
     "init_vprinting(use_latex='mathjax', pretty_print=False)\n",
     "from sympy.physics.mechanics import dynamicsymbols"
@@ -360,43 +372,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Definimos las variables que formaran parte de nuestra matriz homogenia de caracter simbolico."
+    "#### 2.- Variables simbolicas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left( \\theta_{1}, \\  \\theta_{2}, \\  l_{1}, \\  l_{2}, \\  \\theta, \\  \\alpha, \\  a, \\  d\\right)$"
+       "$\\displaystyle \\left( \\theta, \\  \\alpha, \\  a, \\  d\\right)$"
       ],
       "text/plain": [
-       "(theta1, theta2, l1, l2, theta, alpha, a, d)"
+       "(theta, alpha, a, d)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "theta1, theta2, l1, l2, theta, alpha, a, d = dynamicsymbols('theta1 theta2 l1 l2 theta alpha a d')\n",
-    "theta1, theta2, l1, l2, theta, alpha, a, d "
+    "#Variables simbolicas para la obtencion de la matriz DH\n",
+    "theta, alpha, a, d = dynamicsymbols('theta alpha a d')\n",
+    "#Imprimimos las variables\n",
+    "theta, alpha, a, d "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Definimos la matriz homogenea para parametros de D-H"
+    "#### 3.- Matrices de rotacion y obtencion de matriz D-H"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -412,143 +426,323 @@
        "[         0,                      0,                      0,            1]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rot = sp.Matrix([[sp.cos(theta), -sp.sin(theta)*sp.cos(alpha), sp.sin(theta)*sp.sin(alpha)],\n",
-    "                 [sp.sin(theta), sp.cos(theta)*sp.cos(alpha), -sp.cos(theta)*sp.sin(alpha)],\n",
-    "                 [0, sp.sin(alpha), sp.cos(alpha)]])\n",
+    "#Definimos las matrices de rotacion y traslacion correspondientes\n",
     "\n",
-    "trans = sp.Matrix([a*sp.cos(theta),a*sp.sin(theta),d])\n",
+    "#Rotacion en Z\n",
+    "rz = sp.Matrix([[sp.cos(theta),-sp.sin(theta),0,0],\n",
+    "               [sp.sin(theta),sp.cos(theta),0,0],\n",
+    "               [0,0,1,0],\n",
+    "               [0,0,0,1]])\n",
     "\n",
-    "last_row = sp.Matrix([[0, 0, 0, 1]])\n",
+    "#Traslacion en Z\n",
+    "tz = sp.Matrix([[1,0,0,0],\n",
+    "               [0,1,0,0],\n",
+    "               [0,0,1,d],\n",
+    "               [0,0,0,1]])\n",
     "\n",
-    "m = sp.Matrix.vstack(sp.Matrix.hstack(rot, trans), last_row)\n",
-    "m"
+    "#Traslacion en X\n",
+    "tx = sp.Matrix([[1,0,0,a],\n",
+    "               [0,1,0,0],\n",
+    "               [0,0,1,0],\n",
+    "               [0,0,0,1]])\n",
+    "\n",
+    "#Rotacion en X\n",
+    "rx = sp.Matrix([[1,0,0,0],\n",
+    "               [0,sp.cos(alpha),-sp.sin(alpha),0],\n",
+    "               [0,sp.sin(alpha),sp.cos(alpha),0],\n",
+    "               [0,0,0,1]])\n",
+    "\n",
+    "#Matriz de rotacion de parametros D-H\n",
+    "DH = rz*tz*tx*rx\n",
+    "#Se muestra la matriz A resultado de la operacion anterior\n",
+    "DH"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Eslabon 1"
+    "#### 4.- Agregamos de uno en uno los grados de libertad correspondientes.\n",
+    "\n",
+    "Se sustituyen la matriz D-H los parametros theta,d,a,alpha.\n",
+    "<br>En base a la tabla obtenida por nosotros mismos referente al robot diseñado\n",
+    "<br><br>\n",
+    "Donde : \n",
+    "<p>\n",
+    "    <li>theta = La rotacion en Z.</li>\n",
+    "    <li>d = Desplazamiento en Z.</li>\n",
+    "    <li>a = Desplazamiento en X.</li>\n",
+    "    <li>alpha = La rotacion en X.</li>\n",
+    "</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\operatorname{cos}\\left(\\theta_{1}\\right) & - \\operatorname{sin}\\left(\\theta_{1}\\right) & 0 & l_{1} \\operatorname{cos}\\left(\\theta_{1}\\right)\\\\\\operatorname{sin}\\left(\\theta_{1}\\right) & \\operatorname{cos}\\left(\\theta_{1}\\right) & 0 & l_{1} \\operatorname{sin}\\left(\\theta_{1}\\right)\\\\0 & 0 & 1 & 0\\\\0 & 0 & 0 & 1\\end{matrix}\\right]$"
+       "$\\displaystyle \\left( l_{1}, \\  \\theta_{2}, \\  d_{2}, \\  \\theta_{3}, \\  d_{3}, \\  l_{4}\\right)$"
       ],
       "text/plain": [
-       "Matrix([\n",
-       "[cos(theta1), -sin(theta1), 0, l1*cos(theta1)],\n",
-       "[sin(theta1),  cos(theta1), 0, l1*sin(theta1)],\n",
-       "[          0,            0, 1,              0],\n",
-       "[          0,            0, 0,              1]])"
+       "(l1, theta2, d2, theta3, d3, l4)"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m01 = m.subs({alpha:0, a:l1, theta:theta1, d:0})\n",
-    "m01"
+    "#Variables simbolicas para sustituir en la matriz homogenea (DH)\n",
+    "l1, theta2, d2, theta3, d3, l4 = dynamicsymbols('l1 theta2 d2 theta3 d3 l4')\n",
+    "#Imprimimos las variables\n",
+    "l1, theta2, d2, theta3, d3, l4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Eslabon corredera"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\operatorname{cos}\\left(\\theta_{2}\\right) & - \\operatorname{sin}\\left(\\theta_{2}\\right) & 0 & l_{2} \\operatorname{cos}\\left(\\theta_{2}\\right)\\\\\\operatorname{sin}\\left(\\theta_{2}\\right) & \\operatorname{cos}\\left(\\theta_{2}\\right) & 0 & l_{2} \\operatorname{sin}\\left(\\theta_{2}\\right)\\\\0 & 0 & 1 & 0\\\\0 & 0 & 0 & 1\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}1 & 0 & 0 & 0\\\\0 & 1 & 0 & 0\\\\0 & 0 & 1 & l_{1}\\\\0 & 0 & 0 & 1\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[cos(theta2), -sin(theta2), 0, l2*cos(theta2)],\n",
-       "[sin(theta2),  cos(theta2), 0, l2*sin(theta2)],\n",
-       "[          0,            0, 1,              0],\n",
-       "[          0,            0, 0,              1]])"
+       "[1, 0, 0,  0],\n",
+       "[0, 1, 0,  0],\n",
+       "[0, 0, 1, l1],\n",
+       "[0, 0, 0,  1]])"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m12 = m.subs({alpha:0, a:l2, theta:theta2, d:0})\n",
-    "m12"
+    "rot_corredera = DH.subs({theta:0, d:l1, a:0, alpha:0 })\n",
+    "#imprimimos la matriz\n",
+    "rot_corredera"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Eslabon 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\operatorname{cos}\\left(\\theta_{2}\\right) & - \\operatorname{sin}\\left(\\theta_{2}\\right) & 0 & d_{2} \\operatorname{cos}\\left(\\theta_{2}\\right)\\\\\\operatorname{sin}\\left(\\theta_{2}\\right) & \\operatorname{cos}\\left(\\theta_{2}\\right) & 0 & d_{2} \\operatorname{sin}\\left(\\theta_{2}\\right)\\\\0 & 0 & 1 & 0\\\\0 & 0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[cos(theta2), -sin(theta2), 0, d2*cos(theta2)],\n",
+       "[sin(theta2),  cos(theta2), 0, d2*sin(theta2)],\n",
+       "[          0,            0, 1,              0],\n",
+       "[          0,            0, 0,              1]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rot_eslabon1 = DH.subs({theta:theta2, d:0, a:d2, alpha:0 })\n",
+    "#imprimimos la matriz\n",
+    "rot_eslabon1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Eslabon 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}- \\operatorname{sin}\\left(\\theta_{1}\\right) \\operatorname{sin}\\left(\\theta_{2}\\right) + \\operatorname{cos}\\left(\\theta_{1}\\right) \\operatorname{cos}\\left(\\theta_{2}\\right) & - \\operatorname{sin}\\left(\\theta_{1}\\right) \\operatorname{cos}\\left(\\theta_{2}\\right) - \\operatorname{sin}\\left(\\theta_{2}\\right) \\operatorname{cos}\\left(\\theta_{1}\\right) & 0 & l_{1} \\operatorname{cos}\\left(\\theta_{1}\\right) - l_{2} \\operatorname{sin}\\left(\\theta_{1}\\right) \\operatorname{sin}\\left(\\theta_{2}\\right) + l_{2} \\operatorname{cos}\\left(\\theta_{1}\\right) \\operatorname{cos}\\left(\\theta_{2}\\right)\\\\\\operatorname{sin}\\left(\\theta_{1}\\right) \\operatorname{cos}\\left(\\theta_{2}\\right) + \\operatorname{sin}\\left(\\theta_{2}\\right) \\operatorname{cos}\\left(\\theta_{1}\\right) & - \\operatorname{sin}\\left(\\theta_{1}\\right) \\operatorname{sin}\\left(\\theta_{2}\\right) + \\operatorname{cos}\\left(\\theta_{1}\\right) \\operatorname{cos}\\left(\\theta_{2}\\right) & 0 & l_{1} \\operatorname{sin}\\left(\\theta_{1}\\right) + l_{2} \\operatorname{sin}\\left(\\theta_{1}\\right) \\operatorname{cos}\\left(\\theta_{2}\\right) + l_{2} \\operatorname{sin}\\left(\\theta_{2}\\right) \\operatorname{cos}\\left(\\theta_{1}\\right)\\\\0 & 0 & 1 & 0\\\\0 & 0 & 0 & 1\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\operatorname{cos}\\left(\\theta_{3}\\right) & - \\operatorname{sin}\\left(\\theta_{3}\\right) & 0 & d_{3} \\operatorname{cos}\\left(\\theta_{3}\\right)\\\\\\operatorname{sin}\\left(\\theta_{3}\\right) & \\operatorname{cos}\\left(\\theta_{3}\\right) & 0 & d_{3} \\operatorname{sin}\\left(\\theta_{3}\\right)\\\\0 & 0 & 1 & 0\\\\0 & 0 & 0 & 1\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[-sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2), -sin(theta1)*cos(theta2) - sin(theta2)*cos(theta1), 0, l1*cos(theta1) - l2*sin(theta1)*sin(theta2) + l2*cos(theta1)*cos(theta2)],\n",
-       "[ sin(theta1)*cos(theta2) + sin(theta2)*cos(theta1), -sin(theta1)*sin(theta2) + cos(theta1)*cos(theta2), 0, l1*sin(theta1) + l2*sin(theta1)*cos(theta2) + l2*sin(theta2)*cos(theta1)],\n",
-       "[                                                 0,                                                  0, 1,                                                                        0],\n",
+       "[cos(theta3), -sin(theta3), 0, d3*cos(theta3)],\n",
+       "[sin(theta3),  cos(theta3), 0, d3*sin(theta3)],\n",
+       "[          0,            0, 1,              0],\n",
+       "[          0,            0, 0,              1]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rot_eslabon2 = DH.subs({theta:theta3, d:0, a:d3, alpha:0 })\n",
+    "#imprimimos la matriz\n",
+    "rot_eslabon2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Efector final "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}1 & 0 & 0 & 0\\\\0 & 1 & 0 & 0\\\\0 & 0 & 1 & l_{4}\\\\0 & 0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[1, 0, 0,  0],\n",
+       "[0, 1, 0,  0],\n",
+       "[0, 0, 1, l4],\n",
+       "[0, 0, 0,  1]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rot_efector = DH.subs({theta:0, d:l4, a:0, alpha:0 })\n",
+    "#imprimimos la matriz\n",
+    "rot_efector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Obtencion de matriz homogenea y simplificacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}- \\operatorname{sin}\\left(\\theta_{2}\\right) \\operatorname{sin}\\left(\\theta_{3}\\right) + \\operatorname{cos}\\left(\\theta_{2}\\right) \\operatorname{cos}\\left(\\theta_{3}\\right) & - \\operatorname{sin}\\left(\\theta_{2}\\right) \\operatorname{cos}\\left(\\theta_{3}\\right) - \\operatorname{sin}\\left(\\theta_{3}\\right) \\operatorname{cos}\\left(\\theta_{2}\\right) & 0 & d_{2} \\operatorname{cos}\\left(\\theta_{2}\\right) - d_{3} \\operatorname{sin}\\left(\\theta_{2}\\right) \\operatorname{sin}\\left(\\theta_{3}\\right) + d_{3} \\operatorname{cos}\\left(\\theta_{2}\\right) \\operatorname{cos}\\left(\\theta_{3}\\right)\\\\\\operatorname{sin}\\left(\\theta_{2}\\right) \\operatorname{cos}\\left(\\theta_{3}\\right) + \\operatorname{sin}\\left(\\theta_{3}\\right) \\operatorname{cos}\\left(\\theta_{2}\\right) & - \\operatorname{sin}\\left(\\theta_{2}\\right) \\operatorname{sin}\\left(\\theta_{3}\\right) + \\operatorname{cos}\\left(\\theta_{2}\\right) \\operatorname{cos}\\left(\\theta_{3}\\right) & 0 & d_{2} \\operatorname{sin}\\left(\\theta_{2}\\right) + d_{3} \\operatorname{sin}\\left(\\theta_{2}\\right) \\operatorname{cos}\\left(\\theta_{3}\\right) + d_{3} \\operatorname{sin}\\left(\\theta_{3}\\right) \\operatorname{cos}\\left(\\theta_{2}\\right)\\\\0 & 0 & 1 & l_{1} + l_{4}\\\\0 & 0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[-sin(theta2)*sin(theta3) + cos(theta2)*cos(theta3), -sin(theta2)*cos(theta3) - sin(theta3)*cos(theta2), 0, d2*cos(theta2) - d3*sin(theta2)*sin(theta3) + d3*cos(theta2)*cos(theta3)],\n",
+       "[ sin(theta2)*cos(theta3) + sin(theta3)*cos(theta2), -sin(theta2)*sin(theta3) + cos(theta2)*cos(theta3), 0, d2*sin(theta2) + d3*sin(theta2)*cos(theta3) + d3*sin(theta3)*cos(theta2)],\n",
+       "[                                                 0,                                                  0, 1,                                                                  l1 + l4],\n",
        "[                                                 0,                                                  0, 0,                                                                        1]])"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m02 = (m01*m12)\n",
-    "m02"
+    "matriz_homogenea_resultado = (rot_corredera * rot_eslabon1 * rot_eslabon2 * rot_efector)\n",
+    "\n",
+    "#Imprimimos la matriz final resultado de la ecuacion anterior \n",
+    "matriz_homogenea_resultado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\operatorname{cos}\\left(\\theta_{1} + \\theta_{2}\\right) & - \\operatorname{sin}\\left(\\theta_{1} + \\theta_{2}\\right) & l_{1} \\operatorname{cos}\\left(\\theta_{1}\\right) + l_{2} \\operatorname{cos}\\left(\\theta_{1} + \\theta_{2}\\right)\\\\\\operatorname{sin}\\left(\\theta_{1} + \\theta_{2}\\right) & \\operatorname{cos}\\left(\\theta_{1} + \\theta_{2}\\right) & l_{1} \\operatorname{sin}\\left(\\theta_{1}\\right) + l_{2} \\operatorname{sin}\\left(\\theta_{1} + \\theta_{2}\\right)\\\\0 & 0 & 1\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\operatorname{cos}\\left(\\theta_{2} + \\theta_{3}\\right) & - \\operatorname{sin}\\left(\\theta_{2} + \\theta_{3}\\right) & 0 & d_{2} \\operatorname{cos}\\left(\\theta_{2}\\right) + d_{3} \\operatorname{cos}\\left(\\theta_{2} + \\theta_{3}\\right)\\\\\\operatorname{sin}\\left(\\theta_{2} + \\theta_{3}\\right) & \\operatorname{cos}\\left(\\theta_{2} + \\theta_{3}\\right) & 0 & d_{2} \\operatorname{sin}\\left(\\theta_{2}\\right) + d_{3} \\operatorname{sin}\\left(\\theta_{2} + \\theta_{3}\\right)\\\\0 & 0 & 1 & l_{1} + l_{4}\\\\0 & 0 & 0 & 1\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[cos(theta1 + theta2), -sin(theta1 + theta2), l1*cos(theta1) + l2*cos(theta1 + theta2)],\n",
-       "[sin(theta1 + theta2),  cos(theta1 + theta2), l1*sin(theta1) + l2*sin(theta1 + theta2)],\n",
-       "[                   0,                     0,                                        1]])"
+       "[cos(theta2 + theta3), -sin(theta2 + theta3), 0, d2*cos(theta2) + d3*cos(theta2 + theta3)],\n",
+       "[sin(theta2 + theta3),  cos(theta2 + theta3), 0, d2*sin(theta2) + d3*sin(theta2 + theta3)],\n",
+       "[                   0,                     0, 1,                                  l1 + l4],\n",
+       "[                   0,                     0, 0,                                        1]])"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mbee= sp.Matrix([[m02[0,0].simplify(), m02[0,1].simplify(), sp.trigsimp(m02[0,3].simplify())],\n",
-    "                 [m02[1,0].simplify(), m02[1,1].simplify(), sp.trigsimp(m02[1,3].simplify())],\n",
-    "                 [m02[2,0].simplify(), m02[2,1].simplify(), m02[2,2].simplify()]])\n",
+    "matriz_homogenea_simplificada = sp.Matrix([[T[0,0].simplify(), T[0,1].simplify(), T[0,2].simplify(),T[0,3].simplify()],\n",
+    "                 [T[1,0].simplify(), T[1,1].simplify(), T[1,2].simplify(),T[1,3].simplify()],\n",
+    "                 [T[2,0].simplify(), T[2,1].simplify(), T[2,2].simplify(),T[2,3].simplify()],\n",
+    "                 [T[3,0].simplify(), T[3,1].simplify(), T[3,2].simplify(),T[3,3].simplify()]])\n",
     "\n",
-    "mbee"
+    "#Imprimimos la matriz ya simplificada \n",
+    "matriz_homogenea_simplificada"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.- Obtener las ecuaciones de Cinematica\n",
+    "\n",
+    "De la matriz obtenida por Denavit Hartenberg (D-H), se obtienen las ecuaciones para cinematrica Directa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ecuaciones de posicion x,y,z\n",
+    "pos_x = matriz_homogenea_simplificada[0,3]\n",
+    "pos_y = matriz_homogenea_simplificada[1,3]\n",
+    "pos_z = matriz_homogenea_simplificada[2,3]"
    ]
   }
  ],
