Se agregaron las funciones que regresan la posicion en x,y,z dadas las ecuaciones de posicion

--- a/Simulacion_Deskbot.ipynb
+++ b/Simulacion_Deskbot.ipynb
@@ -340,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cinematica directa del modelo por D-H\n",
+    "## Cinematica directa del modelo por D-H\n",
     "\n",
     "Se realiza un algoritmo de Denavit-Hartenberg para resolver el modelo cinematico directo del robot."
    ]
@@ -506,6 +506,21 @@
     "l1, theta2, d2, theta3, d3, l4 = dynamicsymbols('l1 theta2 d2 theta3 d3 l4')\n",
     "#Imprimimos las variables\n",
     "l1, theta2, d2, theta3, d3, l4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De estas variables se obserba lo siguiente : \n",
+    "\n",
+    "<p>\n",
+    "    <li>l1 = La distancia que recorre la corredera en el eje Z. </li>\n",
+    "    <li>theta2 = La rotacion en el eje Z que realiza el eslabon 1. </li>\n",
+    "    <li>d2 = El desplazamiento en X que recorre el eslabon 1. </li>\n",
+    "    <li>theta3 = La rotacion en el eje Z que realiza el eslabon 2. </li>\n",
+    "    <li>d3 = El desplazamiento en X que recorre el eslabon 2. </li>\n",
+    "    <li>l4 = La distancia que recorre el efector final en el eje Z. </li>"
    ]
   },
   {
@@ -735,14 +750,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}d_{2} \\operatorname{cos}\\left(\\theta_{2}\\right) + d_{3} \\operatorname{cos}\\left(\\theta_{2} + \\theta_{3}\\right)\\\\d_{2} \\operatorname{sin}\\left(\\theta_{2}\\right) + d_{3} \\operatorname{sin}\\left(\\theta_{2} + \\theta_{3}\\right)\\\\l_{1} + l_{4}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[d2*cos(theta2) + d3*cos(theta2 + theta3)],\n",
+       "[d2*sin(theta2) + d3*sin(theta2 + theta3)],\n",
+       "[                                 l1 + l4]])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Dado que la ultima columna representa el posicionamiento del robot obtenemos dicho vector\n",
+    "posiciones = matriz_homogenea_simplificada[0:3,3] #Vector de posiciones 4 columna de la matriz homogenea\n",
+    "\n",
+    "#Ecuaciones de posicion x,y,z\n",
+    "pos_x = posiciones[0]\n",
+    "pos_y = posiciones[1]\n",
+    "pos_z = posiciones[2]\n",
+    "\n",
+    "#Imprimimos el vector de posiciones\n",
+    "posiciones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De estas ecuaciones de posicion se desprenden las siguientes funciones para obtener su pocision dados los parametros deseados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Ecuaciones de posicion x,y,z\n",
-    "pos_x = matriz_homogenea_simplificada[0,3]\n",
-    "pos_y = matriz_homogenea_simplificada[1,3]\n",
-    "pos_z = matriz_homogenea_simplificada[2,3]"
+    "#Funciones de cinematica directa del mecanismo\n",
+    "def get_posicion_x(d_2,d_3,theta_2,theta_3):\n",
+    "    \"\"\"\n",
+    "    Resuelve la ecuacion de posicion en el eje x, y regresa su resultado numerico\n",
+    "    \"\"\"\n",
+    "    return  pos_x.subs({d2: d_2 , d3: d_3,  theta2 : theta_2, theta3 : theta_3})\n",
+    "\n",
+    "def get_posicion_y(d_2,d_3,theta_2,theta_3):\n",
+    "    \"\"\"\n",
+    "    Resuelve la ecuacion de posicion en el eje y, y regresa su resultado numerico\n",
+    "    \"\"\"\n",
+    "    return  pos_y.subs({d2: d_2 , d3: d_3,  theta2 : theta_2, theta3 : theta_3})\n",
+    "\n",
+    "def get_posicion_z(l_1, l_4):\n",
+    "    \"\"\"\n",
+    "    Resuelve la ecuacion de posicion en el eje x, y regresa su resultado numerico\n",
+    "    \"\"\"\n",
+    "    return  pos_z.subs({l1 : l_1, l4 : l_4})\n"
    ]
   }
  ],
