Una demostracion de cinematica directa con medidas obtenidas de la simulacion

--- a/Simulacion_Deskbot.ipynb
+++ b/Simulacion_Deskbot.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "(theta, alpha, a, d)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "[         0,                      0,                      0,            1]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "(l1, theta2, d2, theta3, d3, l4)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "[0, 0, 0,  1]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -586,7 +586,7 @@
        "[          0,            0, 0,              1]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "[          0,            0, 0,              1]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
        "[0, 0, 0,  1]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "[                                                 0,                                                  0, 0,                                                                        1]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,13 +702,14 @@
    "source": [
     "matriz_homogenea_resultado = (rot_corredera * rot_eslabon1 * rot_eslabon2 * rot_efector)\n",
     "\n",
-    "#Imprimimos la matriz final resultado de la ecuacion anterior \n",
+    "#Imprimimos la matriz final resultado de la ecuacion anterior\n",
+    "T = matriz_homogenea_resultado\n",
     "matriz_homogenea_resultado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +725,7 @@
        "[                   0,                     0, 0,                                        1]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +766,7 @@
        "[                                 l1 + l4]])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,28 +793,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dado que el desplazamiento en X para ambos eslabones es fijo, pues depende de la longitud como tal del eslabon.\n",
+    "d_2 = 200 / 1000 #206 mm\n",
+    "d_3 = 200 / 1000 #206 mm\n",
+    "\n",
     "#Funciones de cinematica directa del mecanismo\n",
-    "def get_posicion_x(d_2,d_3,theta_2,theta_3):\n",
+    "def get_posicion_x(angulo_eslabon_1,angulo_eslabon_2):\n",
     "    \"\"\"\n",
-    "    Resuelve la ecuacion de posicion en el eje x, y regresa su resultado numerico\n",
+    "    Resuelve la ecuacion de posicion en el eje x, y regresa su resultado.\n",
     "    \"\"\"\n",
-    "    return  pos_x.subs({d2: d_2 , d3: d_3,  theta2 : theta_2, theta3 : theta_3})\n",
+    "    return  pos_x.subs({d2: d_2 , d3: d_3,  theta2 : angulo_eslabon_1, theta3 : angulo_eslabon_2})\n",
     "\n",
-    "def get_posicion_y(d_2,d_3,theta_2,theta_3):\n",
+    "def get_posicion_y(angulo_eslabon_1,angulo_eslabon_2):\n",
     "    \"\"\"\n",
-    "    Resuelve la ecuacion de posicion en el eje y, y regresa su resultado numerico\n",
+    "    Resuelve la ecuacion de posicion en el eje y, y regresa su resultado.\n",
     "    \"\"\"\n",
-    "    return  pos_y.subs({d2: d_2 , d3: d_3,  theta2 : theta_2, theta3 : theta_3})\n",
+    "    return  pos_y.subs({d2: d_2 , d3: d_3,  theta2 : angulo_eslabon_1, theta3 : angulo_eslabon_2})\n",
     "\n",
-    "def get_posicion_z(l_1, l_4):\n",
+    "def get_posicion_z(desplazamiento_corredera, desplazamiento_efector_final):\n",
     "    \"\"\"\n",
-    "    Resuelve la ecuacion de posicion en el eje x, y regresa su resultado numerico\n",
+    "    Resuelve la ecuacion de posicion en el eje z, y regresa su resultado.\n",
     "    \"\"\"\n",
-    "    return  pos_z.subs({l1 : l_1, l4 : l_4})\n"
+    "    return  pos_z.subs({l1 : desplazamiento_corredera, l4 : desplazamiento_efector_final})\n",
+    "\n",
+    "def get_posicion_cinematica_directa(angulo_eslabon_1,angulo_eslabon_2,desplazamiento_corredera,desplazamiento_efector_final):\n",
+    "    \n",
+    "    vector_posicion_final = sp.Matrix([[get_posicion_x(angulo_eslabon_1,angulo_eslabon_2)],\n",
+    "                                      [get_posicion_y(angulo_eslabon_1,angulo_eslabon_2)],\n",
+    "                                      [get_posicion_z(desplazamiento_corredera,desplazamiento_efector_final)]])\n",
+    "    return vector_posicion_final\n",
+    "\n",
+    "T = get_posicion_cinematica_directa(0,0,0,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}0.4\\\\0\\\\0\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[0.4],\n",
+       "[  0],\n",
+       "[  0]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T"
    ]
   }
  ],
