--- a/Simulacion_Deskbot.ipynb
+++ b/Simulacion_Deskbot.ipynb
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1007,13 +1007,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}0.58801 & 0 & 0.4596\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}0.2 \\operatorname{cos}\\left(135\\right) + 0.2 \\operatorname{cos}\\left(90\\right) + 0.18801 & 0.2 \\operatorname{sin}\\left(135\\right) + 0.2 \\operatorname{sin}\\left(90\\right) & 0.3796\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "Matrix([[0.58801, 0, 0.4596]])"
+       "Matrix([[0.2*cos(135) + 0.2*cos(90) + 0.18801, 0.2*sin(135) + 0.2*sin(90), 0.3796]])"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,10 +1024,10 @@
     "\n",
     "#Variables para simulacion y calculos\n",
     "\n",
-    "A1 = 0 #Grados , eslabon 1.\n",
-    "A2 = 0#Grados, eslabon 2.\n",
+    "A1 = 90 #Grados , eslabon 1.\n",
+    "A2 = 45#Grados, eslabon 2.\n",
     "LC = 0.3 # mm, movimiento en z, corredera.\n",
-    "LF = 0.04 # mm, movimiento en z, efector final.\n",
+    "LF = -0.04 # mm, movimiento en z, efector final.\n",
     "\n",
     "#ejecutamos en la simulacion un movimiento\n",
     "mover_robot_cinematica_directa(A1,A2,LC,LF)\n",
@@ -1046,19 +1046,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[ 0.5645363330841064, \\  -0.012711401097476482, \\  0.4200233817100525\\right]$"
+       "$\\displaystyle \\left[ 0.025860225781798363, \\  0.3482555150985718, \\  0.37556636333465576\\right]$"
       ],
       "text/plain": [
-       "[0.5645363330841064, -0.012711401097476482, 0.4200233817100525]"
+       "[0.025860225781798363, 0.3482555150985718, 0.37556636333465576]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,19 +1078,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error absoluto en X : 0.0234736669158935\n",
-      "Error absoluto en Y : 0.0127114010974765\n",
-      "Error absoluto en Z : 0.0395766182899475\n",
-      "Error del valor calculado con respecto al real en X, es de : 4.15804360857608 %\n",
-      "Error del valor calculado con respecto al real en Y, es de : 2.25165332194530 %\n",
-      "Error del valor calculado con respecto al real en Z, es de : 7.01046433517171 %\n"
+      "Error absoluto en X : -0.162149774218202 - 0.2*cos(90) - 0.2*cos(135)\n",
+      "Error absoluto en Y : -0.2*sin(90) - 0.2*sin(135) + 0.348255515098572\n",
+      "Error absoluto en Z : 0.00403363666534423\n",
+      "Error del valor calculado con respecto al real en X, es de : -627.023814820404 - 773.388452550826*cos(90) - 773.388452550826*cos(135) %\n",
+      "Error del valor calculado con respecto al real en Y, es de : -773.388452550826*sin(90) - 773.388452550826*sin(135) + 1346.68396957188 %\n",
+      "Error del valor calculado con respecto al real en Z, es de : 15.5978400938142 %\n"
      ]
     }
    ],
@@ -1144,10 +1144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mover_robot_cinematica_directa(90,-90,0,0)\n",
+    "delay(2)\n",
+    "mover_robot_cinematica_directa(-90,45,0,0)\n",
+    "delay(2)\n",
+    "mover_robot_cinematica_directa(45,-45,0.1,0.04)"
+   ]
   }
  ],
  "metadata": {
